Refactor PWA update system and improve localization - v52
- 🔥 Removed `PwaService` and `PwaUpdateService` classes, along with their associated components (`PwaUpdateMonitor`, `PwaStatusCard`), simplifying the PWA update architecture.
- 🚀 Migrated to a more robust `pwaUpdater` JavaScript system for handling PWA updates.
- 🌐 Added localized strings (`PwaUpdateNewVersionAvailable`, `PwaUpdateClickToUpdate`) for multilingual update notifications.
- 🛠️ Updated `PwaUpdateAvailableMonitor.razor` to use `LocalizationService` and removed dependency on `BlazorService`.
- 🗑️ Removed `PWA_UPDATE_SYSTEM.md` documentation file as the old system is deprecated.
- ✂️ Commented out debug logs in `auth-debug.js` to reduce console clutter in production.
- 🧹 Cleaned up dependency injection by removing unused `PwaService` and `PwaUpdateService` registrations.

--- a/Gastos.Shared/Resources/Resource.en.resx
+++ b/Gastos.Shared/Resources/Resource.en.resx
@@ -498,4 +498,10 @@
   <data name="InfoReadingReceipts" xml:space="preserve">
     <value>Read new reeipts from PDF, images or photos</value>
   </data>
+  <data name="PwaUpdateNewVersionAvailable" xml:space="preserve">
+    <value>New version available</value>
+  </data>
+  <data name="PwaUpdateClickToUpdate" xml:space="preserve">
+    <value>Click here to update</value>
+  </data>
 </root>
