--- a/Gastos.Shared/Resources/Resource.resx
+++ b/Gastos.Shared/Resources/Resource.resx
@@ -141,8 +141,8 @@
   <data name="Hello0" xml:space="preserve">
     <value>¡ Hola {0} !</value>
   </data>
-  <data name="DemoModeMessage1" xml:space="preserve">
-    <value>MODO DEMO</value>
+  <data name="DemoModeMsg1" xml:space="preserve">
+    <value>DEMO</value>
   </data>
   <data name="TableSearch" xml:space="preserve">
     <value>Buscar</value>
@@ -459,8 +459,8 @@
   <data name="ErrorStatusCodeUnauthorized" xml:space="preserve">
     <value>Debes iniciar sesión para realizar esta operación</value>
   </data>
-  <data name="DemoModeMessage2" xml:space="preserve">
-    <value>Inicia sesión para acceder a tus datos</value>
+  <data name="DemoModeMsg2" xml:space="preserve">
+    <value>MODO DEMO. Inicia sesión para acceder a tus datos.</value>
   </data>
   <data name="Themes" xml:space="preserve">
     <value>Temas</value>
