Enhance UI and localization; update build metadata
- ✨ Updated `ProductsCrud.razor` to improve `MudSwitch`:
  - Added localized `Label` for `ParamEmptyImageUrl`.
  - Adjusted bindings and added `Size.Small` property.
- 🎨 Improved `TablePagerContent.razor`:
  - Centered `MudStack` alignment.
  - Refined `MudText` font size for consistency.
- 🛠️ Incremented build metadata in `version-info.json`.
- 🌐 Added `ParamEmptyImageUrl` resource string:
  - English: "No image assigned".
  - Spanish: "Sin imagen asignada".
- 🏷️ Extended `ResourceStrings` enum with `ParamEmptyImageUrl`.

--- a/Gastos.Shared/Resources/Resource.en.resx
+++ b/Gastos.Shared/Resources/Resource.en.resx
@@ -504,4 +504,7 @@
   <data name="PwaUpdateClickToUpdate" xml:space="preserve">
     <value>Click here to update</value>
   </data>
+  <data name="ParamEmptyImageUrl" xml:space="preserve">
+    <value>No image assigned</value>
+  </data>
 </root>
