--- a/Gastos.Shared/Resources/Resource.resx
+++ b/Gastos.Shared/Resources/Resource.resx
@@ -513,4 +513,7 @@
   <data name="ErrorNetwork" xml:space="preserve">
     <value>Error de conexión</value>
   </data>
+  <data name="ErrorReceiptAlreadyPending" xml:space="preserve">
+    <value>Tíquet ya leído.</value>
+  </data>
 </root>
