Add sizing to unique product constraints
* 🛠️ Added migration `20251016145413_AddSizingToUniqueProduct` to update the database schema.
* 🔑 Updated `products` table to include a new unique index with `sizing_id`.
* 🗑️ Removed the previous unique index from the `products` table.
* 🔄 Implemented `Down` method to reverse the migration changes.
* 🏗️ Updated `Designer` file to reflect schema changes:
  - Added `SizingId` and `SizingValue` to the `Product` entity.
  - Defined a foreign key relationship between `Product` and `Sizing`.
  - Updated unique index for `Product` to include `SizingId` and `SizingValue`.
* 🌱 Seeded `sizings` table with predefined values (`ml`, `cl`, `L`, `gr`, `Kg`, `u`).
* 🔗 Updated relationships and navigation properties for `Receipt`, `ReceiptItem`, and `Store`.

--- a/Gastos.Shared/Resources/Resource.en.resx
+++ b/Gastos.Shared/Resources/Resource.en.resx
@@ -408,8 +408,8 @@
   <data name="ValidProductUnitsPack" xml:space="preserve">
     <value>Units per pack must be greater than zero.</value>
   </data>
-  <data name="ValidProductUniqueNameAndUnitsPack" xml:space="preserve">
-    <value>A product with this name and units/pack already exists.</value>
+  <data name="ValidProductUnique" xml:space="preserve">
+    <value>Product already exists.</value>
   </data>
   <data name="ValidReceiptItemQuantity" xml:space="preserve">
     <value>Quantity cannot be zero.</value>
