Update dependencies, localization, and UI enhancements
- 🔄 **Binary Updates**: Updated and added `.nupkg` files for `DocIntel.Api.Sdk` and `DocIntel.Contracts`.
- 📦 **Dependency Upgrades**: Updated multiple Microsoft and third-party packages, including `DocIntel.Api.Sdk` to `1.1.2` and `Microsoft.AspNetCore.*` to `9.0.10`.
- 🛠️ **Logic Enhancements**: Improved store update logic in `StoreRepository.cs` and receipt matching in `AnalysisJobsPending.razor`.
- 🌐 **Localization**: Replaced hardcoded text with localized strings for login, camera actions, and errors.
- 🎨 **UI Improvements**: Enhanced date handling, added delete buttons, and optimized layouts in various Razor components.
- 🚀 **Performance**: Reduced refresh interval and optimized API calls for pending job status checks.
- 🏗️ **Build Config**: Adjusted `NugetDestination` path and added logging for file copy operations.
- 🆙 **Versioning**: Incremented build number and updated metadata in `version-info.json`.

--- a/Gastos.Shared/Resources/Resource.en.resx
+++ b/Gastos.Shared/Resources/Resource.en.resx
@@ -516,4 +516,34 @@
   <data name="ErrorReceiptAlreadyPending" xml:space="preserve">
     <value>Receipt already read.</value>
   </data>
+  <data name="ErrorCameraInitFailed" xml:space="preserve">
+    <value>Error initializing camera</value>
+  </data>
+  <data name="ErrorCameraSwitching" xml:space="preserve">
+    <value>Error switching camera</value>
+  </data>
+  <data name="ErrorCameraCapturing" xml:space="preserve">
+    <value>Error capturing photo</value>
+  </data>
+  <data name="ErrorCameraStopping" xml:space="preserve">
+    <value>Error stopping camera</value>
+  </data>
+  <data name="ErrorCameraUnavailable" xml:space="preserve">
+    <value>Camera unavailable</value>
+  </data>
+  <data name="ActShotCamera" xml:space="preserve">
+    <value>Take photo</value>
+  </data>
+  <data name="ActRetry" xml:space="preserve">
+    <value>Retry</value>
+  </data>
+  <data name="InfoCameraInitializing" xml:space="preserve">
+    <value>Initializing camera...</value>
+  </data>
+  <data name="InfoLoginStarting" xml:space="preserve">
+    <value>Starting login...</value>
+  </data>
+  <data name="InfoLoginProcessing" xml:space="preserve">
+    <value>Please wait while your authentication is processed...</value>
+  </data>
 </root>
