Add support for discounts in receipts
- ✨ Added `Discount` property to `Receipt` entity and DTO
- 🛠️ Configured `Discount` with default value in EF Core
- 🗃️ Created migration to add `Discount` column to database
- ✅ Enhanced server and client-side validation for `Discount`
- 🖼️ Updated UI to display and edit `Discount` and total amount
- 🔄 Adjusted mapping extensions for `Discount` handling
- 🧹 Improved product selection in `ReceiptItemEditDialog`
- 🌐 Added localization strings for discount-related features
- 📈 Updated `version-info.json` and resource strings

--- a/Gastos.Shared/Resources/Resource.en.resx
+++ b/Gastos.Shared/Resources/Resource.en.resx
@@ -546,4 +546,10 @@
   <data name="InfoLoginProcessing" xml:space="preserve">
     <value>Please wait while your authentication is processed...</value>
   </data>
+  <data name="ActAddLine" xml:space="preserve">
+    <value>Add line</value>
+  </data>
+  <data name="ValidReceiptDiscount" xml:space="preserve">
+    <value>The discount must be less than or equal to zero.</value>
+  </data>
 </root>
