Enhance UI, logging, and localization support
- ✨ Increased `MudCardHeader` and `MudCardContent` heights for better spacing in `AnalysisJobCard.razor`.
- 🌐 Added localized loading messages with `InfoLoading0` in `Resource.en.resx` and `Resource.resx`.
- 🛠️ Improved `Loading.razor` to support customizable loading text via a new `Text` parameter.
- 🐛 Adjusted refresh logic in `AnalysisJobsPending.razor` to reduce frequency and improve validation.
- 📝 Enhanced logging with `BlazorService.BrowserLogAsync` for better debugging and traceability.
- 🔄 Updated `version-info.json` to reflect the latest build and commit details.

--- a/Gastos.Shared/Resources/Resource.en.resx
+++ b/Gastos.Shared/Resources/Resource.en.resx
@@ -558,4 +558,7 @@
   <data name="ErrorCameraChecking" xml:space="preserve">
     <value>Error checking camera availability</value>
   </data>
+  <data name="InfoLoading0" xml:space="preserve">
+    <value>Loading {0}...</value>
+  </data>
 </root>
